--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,16 @@
 [project]
 name = "multi-agent-design-patterns"
 version = "0.1.0"
-description = "Add your description here"
+description = "多智能体的设计模式合集"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "langchain",
+    "langchain-classic>=1.0.0",
+    "langchain-openai>=1.0.1",
+    "langgraph>=1.0.1",
+    "pydantic-settings>=2.11.0",
+]
 
 [tool.uv.workspace]
 members = [
