--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "langchain",
+    "langchain-anthropic>=1.0.0",
     "langchain-classic>=1.0.0",
+    "langchain-community>=0.4.1",
+    "langchain-ollama>=1.0.0",
     "langchain-openai>=1.0.1",
     "langgraph>=1.0.1",
     "pydantic-settings>=2.11.0",
