--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,9 @@ description = "多智能体的设计模式合集"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "langchain",
-    "langchain-anthropic>=1.0.0",
-    "langchain-classic>=1.0.0",
-    "langchain-community>=0.4.1",
-    "langchain-ollama>=1.0.0",
-    "langchain-openai>=1.0.1",
-    "langgraph>=1.0.1",
+    "langchain>=1.2.0",
+    "langchain-openai>=1.1.6",
+    "langgraph>=1.0.5",
     "pydantic-settings>=2.11.0",
 ]
 
