--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,11 @@
-# LLM Configuration
-LLM_API_KEY=
-LLM_BASEURL=
-LLM_PROVIER=
+SAVE_DIR=./saves
+SILICONFLOW_API_KEY=
+DASHSCOPE_API_KEY=
 
-# PostgreSQL Database Configuration
-POSTGRES_HOST=localhost
+
+# ==========PostgreSQL Database Configuration====================
+POSTGRES_HOST=http://
 POSTGRES_PORT=5432
 POSTGRES_DB=your_database_name
 POSTGRES_USER=your_username
 POSTGRES_PASSWORD=your_password
-
-# PostgreSQL Connection URL (Alternative format)
-# DATABASE_URL=postgresql://username:password@localhost:5432/database_name
