--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "langchain-openai>=1.1.6",
     "langgraph>=1.0.5",
     "pydantic-settings>=2.11.0",
+    "torch>=2.10.0",
 ]
 
 [tool.uv.workspace]
