--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "langchain>=1.2.0",
+    "langchain-google-genai>=4.2.0",
     "langchain-openai>=1.1.6",
     "langgraph>=1.0.5",
     "pydantic-settings>=2.11.0",
