feat: 引入基于 Pydantic 的配置管理系统，支持 TOML 配置、模型定义并更新 .env.example 以包含 Gemini API 密钥。

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 SAVE_DIR=./saves
 SILICONFLOW_API_KEY=
 DASHSCOPE_API_KEY=
+GEMINI_API_KEY=
 
 
 # ==========PostgreSQL Database Configuration====================
