--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.13"
 dependencies = [
     "asyncpg>=0.31.0",
     "langchain>=1.2.0",
+    "langchain-deepseek>=1.0.1",
     "langchain-google-genai>=4.2.0",
+    "langchain-milvus>=0.3.3",
     "langchain-openai>=1.1.6",
     "langgraph>=1.0.5",
     "langgraph-checkpoint-sqlite>=3.0.3",
