--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "asyncpg>=0.31.0",
+    "deepagents>=0.4.3",
     "langchain>=1.2.0",
     "langchain-deepseek>=1.0.1",
     "langchain-google-genai>=4.2.0",
